--- a/platformio.ini
+++ b/platformio.ini
@@ -8,6 +8,8 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+; ATENÇÃO!!!! MUDE ServoTimers.h PARA USAR APENAS TIMER 1
+
 [env:megaatmega2560]
 platform = atmelavr
 board = megaatmega2560
@@ -15,3 +17,4 @@ framework = arduino
 
 lib_deps = 
     marlinfirmware/U8glib-HAL@^0.5.4
+    arduino-libraries/Servo@^1.2.1
